--- a/前言.md
+++ b/前言.md
@@ -1,5 +1,15 @@
 # 前言
 
-市场上已经有很多嵌入式Linux的入门书籍了。  
+## 为什么写这本书
+市场上已经有很多嵌入式Linux的入门书籍了。  
 
-李迟 
+## 读者应当具备哪些基础知识
+
+## 这本书有哪些组成部分
+
+## 本书使用的环境、代码
+
+## 致谢
+
+
+迟思堂工作室 李迟 
