--- a/前言.md
+++ b/前言.md
@@ -5,12 +5,18 @@
 
 ## 读者应当具备哪些基础知识
 
+本书适用于以下读者对象：  
+
 ## 本书有哪些组成部分
 
 ## 本书没有涉及哪些内容
 
 ## 本书使用的环境、代码
-
+本书宿主机为ubuntu 16.04 64bit系统，u-boot、内核和根文件系统等嵌入式实验环境则使用qemu模拟器，另外还使用一款s3c2440平台的嵌入式开发板。  
+本书所有脚本、代码均亲自测试通过。  
+## 在线资源
+本书勘误表地址为：https://github.com/cststudio/embedded-linux-learning-and-practice-ebook 。
+本书代码地址为：https://github.com/cststudio/embedded-linux-learning-and-practice-code 。
 ## 致谢
 
 
