--- a/前言.md
+++ b/前言.md
@@ -8,16 +8,25 @@
 本书适用于以下读者对象：  
 
 ## 本书有哪些组成部分
-
+本书大纲经过精心策划，并听取许多朋友、网友的意见，以一个初学者的角度，逐步展开嵌入式Linux的学习之路。大部分内容
 ## 本书没有涉及哪些内容
+嵌入式Linux范围广，涉及内容多，一本书不可能包括全部内容，也不可能每部分内容都很深入。
 
 ## 本书使用的环境、代码
 本书宿主机为ubuntu 16.04 64bit系统，u-boot、内核和根文件系统等嵌入式实验环境则使用qemu模拟器，另外还使用一款s3c2440平台的嵌入式开发板。  
-本书所有脚本、代码均亲自测试通过。  
+本书所有脚本、代码均亲自测试通过。  
+* u-boot版本为：  
+* coreboot版本为：  
+* Linux内核版本为：  
+* busybox版本为：  
+* qemu版本为：2.5.0  
+
 ## 在线资源
 本书勘误表地址为：https://github.com/cststudio/embedded-linux-learning-and-practice-ebook 。  
 本书代码地址为：https://github.com/cststudio/embedded-linux-learning-and-practice-code 。  
+
 ## 致谢
+感谢   
+感谢   
 
-
-迟思堂工作室 李迟 
+迟思堂工作室 李迟 2018年x月
