--- a/前言.md
+++ b/前言.md
@@ -22,11 +22,13 @@
 * qemu版本为：2.5.0  
 
 ## 在线资源
-本书勘误表地址为：https://github.com/cststudio/embedded-linux-learning-and-practice-ebook 。  
+为了方便读者交流，本书的勘误和书中代码示例，均公开于github上。对书中有任何意见，欢迎在github仓库提issue或pull request。
+本书勘误表地址为：https://github.com/cststudio/embedded-linux-learning-and-practice-ebook 。  
 本书代码地址为：https://github.com/cststudio/embedded-linux-learning-and-practice-code 。  
 
 ## 致谢
 感谢   
 感谢   
 
+限于笔者能力和经验，本书依然有很多不足和遗留，欢迎读者朋友提出宝贵意见。我的联系邮箱是li@latelee.org(备用：latelee@163.com)。
 迟思堂工作室 李迟 2018年x月
