--- a/前言.md
+++ b/前言.md
@@ -30,5 +30,5 @@
 感谢  
 感谢  
 
-限于笔者能力和经验，本书依然有很多不足和遗留，欢迎读者朋友提出宝贵意见。我的联系邮箱是li@latelee.org(备用：latelee@163.com)。  
+限于笔者能力和经验，本书依然有很多不足，欢迎读者朋友提出宝贵意见。我的联系邮箱是li@latelee.org(备用：latelee@163.com)。  
 迟思堂工作室 李迟 2018年x月
