--- a/前言.md
+++ b/前言.md
@@ -22,13 +22,14 @@
 * qemu版本为：2.5.0  
 
 ## 在线资源
-为了方便读者交流，本书的勘误和书中代码示例，均公开于github上。对书中有任何意见，欢迎在github仓库提issue或pull request。  
-本书勘误表地址为：https://github.com/cststudio/embedded-linux-learning-and-practice-ebook 。  
-本书代码地址为：https://github.com/cststudio/embedded-linux-learning-and-practice-code 。  
+本书的勘误和书中源码示例，均公开于github上。限于作者能力和经验，虽然书中命令、代码均亲自测试验证，但难免总有不足和错误，对书中有任何意见，欢迎在github仓库提issue或pull request。另外可以通过电子邮件(li@latelee.org，备用：latelee@163.com)联系我。 
+本书勘误地址为：https://github.com/cststudio/embedded-linux-learning-and-practice-ebook 。  
+本书源码地址为：https://github.com/cststudio/embedded-linux-learning-and-practice-code 。  
 
 ## 致谢
+写书是一个体力活，所谓“文章千古事，得失寸心知”。
 感谢  
 感谢  
 
-限于笔者能力和经验，本书依然有很多不足，欢迎读者朋友提出宝贵意见。我的联系邮箱是li@latelee.org(备用：latelee@163.com)。  
+
 迟思堂工作室 李迟 2018年x月
